Fix horizontal overflow on website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ button {}
     background-color: #F2F2F2;
     padding-top: 40px;
     padding-bottom: 40px;
+    overflow-x: hidden;
 }
 
 .uk-input {
@@ -111,6 +112,7 @@ button {}
 .footer-section {
     background-color: #4596EA;
     padding-top: 40px;
+    overflow-x: hidden;
 }
 
 .footer-section h3 {
